Pen pressure cannot be detected on Wacom Cintiq Pro 16 #51948

Closed
opened 2017-07-01 15:28:05 +02:00 by Shunsuke Saito · 13 comments

System Information

Windows 10 ( with Bootcamp on MacPro 2013)
GPU : AMD FireProD700

Blender Version
Broken: 2.78c, 2.79 test build

Short description of error

Pen pressure from Wacom Cintiq Pro 16 cannot be detected. It works with Intuos Tablet.
Tested in GreasePencil, Sculpt mode, Texure Paint mode.

Exact steps for others to reproduce the error
You need to have Wacom Cintiq Pro 16, but it might be able to reproduce the issue with other graphic tablets as well.

**System Information** Windows 10 ( with Bootcamp on MacPro 2013) GPU : AMD FireProD700 **Blender Version** Broken: 2.78c, 2.79 test build **Short description of error** Pen pressure from Wacom Cintiq Pro 16 cannot be detected. It works with Intuos Tablet. Tested in GreasePencil, Sculpt mode, Texure Paint mode. **Exact steps for others to reproduce the error** You need to have Wacom Cintiq Pro 16, but it might be able to reproduce the issue with other graphic tablets as well.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ShunsukeSaito

Added subscriber: @ShunsukeSaito

Added subscriber: @mont29

Added subscriber: @mont29

The problem will indeed be to find some dev with said material able to reproduce the issue… :/

In the meanwhile, can you try to reproduce the issue on a genuine Windows machine? Doubt mac/bootcamp could cause such issue, but you never know… Also, checking for updates of Wacom drivers might be a good idea.

The problem will indeed be to find some dev with said material able to reproduce the issue… :/ In the meanwhile, can you try to reproduce the issue on a genuine Windows machine? Doubt mac/bootcamp could cause such issue, but you never know… Also, checking for updates of Wacom drivers might be a good idea.

Added subscriber: @Yam

Added subscriber: @Yam

I was testing with some different tablets and had a similar problem with a Wacom Intuos 4 Model PTK-640. After digging into it, I found the cursors being reported as values that aren't handled in GHOST. The following diff fixed it for me.
ptk640-support.diff
Looking into it more I think that there is a programmatic approach to knowing which cursors are active according to Wintab, using WtInfo and WTI_CURSORS, which might bullet-proof this more. I'll look into this more next time I have access to a bunch of tablets.

I was testing with some different tablets and had a similar problem with a Wacom Intuos 4 Model PTK-640. After digging into it, I found the cursors being reported as values that aren't handled in GHOST. The following diff fixed it for me. [ptk640-support.diff](https://archive.blender.org/developer/F674780/ptk640-support.diff) Looking into it more I think that there is a programmatic approach to knowing which cursors are active according to Wintab, using WtInfo and WTI_CURSORS, which might bullet-proof this more. I'll look into this more next time I have access to a bunch of tablets.

This issue was referenced by c3c0495b30

This issue was referenced by c3c0495b30ff64c07e1b728ba3686946d5abe000

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the patch. I committed a more general fix now, hopefully works for the Cintiq too. Tomorrow's build will have the fix:
https://builder.blender.org/download/

Certainly more improvements in tablet handling are welcome, ideally even using Windows Ink.

Thanks for the patch. I committed a more general fix now, hopefully works for the Cintiq too. Tomorrow's build will have the fix: https://builder.blender.org/download/ Certainly more improvements in tablet handling are welcome, ideally even using Windows Ink.

Great! No problem! Sure I will look into Windows Ink problems next time I have access to the hardware.

Great! No problem! Sure I will look into Windows Ink problems next time I have access to the hardware.

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

This is still broken for me but it usually doesn't start right away. When it starts, even my mouse won't work and it also affects texture and curve drawing. If I disable pressure sensitivity then I can make brush strokes again.

This report has been closed, should I file a new report somewhere else? I'm not sure how to trigger this problem to start happening so I've been putting it off.

This is still broken for me but it usually doesn't start right away. When it starts, even my mouse won't work and it also affects texture and curve drawing. If I disable pressure sensitivity then I can make brush strokes again. This report has been closed, should I file a new report somewhere else? I'm not sure how to trigger this problem to start happening so I've been putting it off.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51948
No description provided.